Cant go further - think we need jquery

--- a/views/pages/gamepage.ejs
+++ b/views/pages/gamepage.ejs
@@ -5,8 +5,8 @@
         <title></title>
     </head>
     <body>
-        <h1>${Player 1} Health {100%}</h1>
-        <h1>${Player 2} Health {100%}</h1>
+        <h1> <%=playerOne %>'s Health <%=playerOneHealth%></h1>
+        <h1> <%=playerTwo %>'s Health <%=playerTwoHealth%></h1>
         <button id='p1attack'>P1 Attack</button>
         <button id='p2attack'>P2 Attack</button>
     </body>
