--- a/views/pages/openingpage.ejs
+++ b/views/pages/openingpage.ejs
@@ -7,8 +7,8 @@
     <body>
         <h1>Name Your Players</h1>
         <form action="/gamepage" method="post">
-        <input id="p1name" type="text">
-        <input id="p2name" type="text">
+        <input id="p1name" type="text" name="one">
+        <input id="p2name" type="text" name="two">
         <input id="submit" type="submit" value="Let's Play">
     </form>
     </body>
