Adding and modifying tests

--- a/views/pages/gamepage.ejs
+++ b/views/pages/gamepage.ejs
@@ -5,8 +5,8 @@
         <title></title>
     </head>
     <body>
-        <h1> <%=playerOne %>'s Health <%=playerOneHealth%></h1>
-        <h1> <%=playerTwo %>'s Health <%=playerTwoHealth%></h1>
+        <h1 id="player-one"> <%=playerOne %>'s Health <%=playerOneHealth%></h1>
+        <h1 id="player-two"> <%=playerTwo %>'s Health <%=playerTwoHealth%></h1>
         <form action="/attack1" method="post">
             <input id="submitp1attack" type="submit" value="Attack <%=playerOne %>">
         </form>
